[css] fix padding/spacing of tools panel

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -441,6 +441,13 @@ table#downloads {
   background-color: inherit;
 }
 
+.panel-body {
+  padding: 5px 10px 20px 10px;
+  li + li {
+    margin-top: 1em;
+  }
+}
+
 nav.navbar {
   background: transparent image_url($bg_image) repeat;
   padding: 1em;
